# paper-2025-density-preserving-river-extraction

./: .gitignore  main.tex  pyproject.toml  qgisproject.qgz  references.bib  template.tex
Definitions/: journalnames.tex  mdpi.cls
data/: makefile
fig/: algorithm.tex  algorithm_improve.tex  example.tex  upstream.tex
tools/: convert_h5_geotiff.py  drainage_density_merge.py  drainage_density_reprojection.py  mask_flow_direction.py  new_empty_raster.py
